--- a/jobs/templates/jobs/job_detail.html
+++ b/jobs/templates/jobs/job_detail.html
@@ -1,6 +1,6 @@
 {% extends "jobs/base.html" %} {% block content %}
 
-<div class="container media content-section">
+<div class="container media content-section mb-5">
   <div class="media-body">
     <div class="job-metadata row">
       <small class="text-muted col">Location: {{ object.location }}</small>
@@ -35,5 +35,6 @@
   </div>
   {% endif %}
 </div>
+
 
 {% endblock content %}
