--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -22,13 +22,17 @@
     <title>Axiom</title>
     {% endif %}
   </head>
+  
   <body>
     <header class="site-header">
       <!-- <nav class="navbar navbar-expand-md bg-dark border-bottom border-body" data-bs-theme="dark"> -->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"
-            ><img src="{% static 'media/axiom_logo_no_bg.webp' %}" alt="axiom logo" width="250px"
+            ><img
+              src="{% static 'media/axiom_logo_no_bg.webp' %}"
+              alt="axiom logo"
+              width="250px"
           /></a>
           <button
             class="navbar-toggler"
@@ -43,25 +47,37 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav me-auto">
-              <a class="nav-item nav-link {% block nav_home%}{% endblock %}" href="{% url 'jobs-home' %}">Home</a>
-              <a class="nav-item nav-link {% block nav_postings%}{% endblock %}" href="{% url 'jobs-postings' %}"
+              <a
+                class="nav-item nav-link {% block nav_home%}{% endblock %}"
+                href="{% url 'jobs-home' %}"
+                >Home</a
+              >
+              <a
+                class="nav-item nav-link {% block nav_postings%}{% endblock %}"
+                href="{% url 'jobs-postings' %}"
                 >Jobs</a
               >
-              <a class="nav-item nav-link {% block nav_services%}{% endblock %}" href="{% url 'jobs-services' %}"
+              <a
+                class="nav-item nav-link {% block nav_services%}{% endblock %}"
+                href="{% url 'jobs-services' %}"
                 >Services</a
               >
-              <a class="nav-item nav-link {% block nav_contact%}{% endblock %}" href="{% url 'jobs-contact' %}"
+              <a
+                class="nav-item nav-link {% block nav_contact%}{% endblock %}"
+                href="{% url 'jobs-contact' %}"
                 >Contact</a
               >
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              {% if user.is_authenticated %}
-              {% if user.is_staff %}
-                <a class="nav-item nav-link" href="{% url 'job-create' %}"
-                >Post New Job</a>
+              {% if user.is_authenticated %} {% if user.is_staff %}
+              <a class="nav-item nav-link" href="{% url 'job-create' %}"
+                >Post New Job</a
+              >
               {% endif %}
-              <a class="nav-item nav-link" href="{% url 'profile' %}"
+              <a
+                class="nav-item nav-link {% block nav_profile%}{% endblock %}"
+                href="{% url 'profile' %}"
                 >Profile</a
               >
               <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
@@ -79,71 +95,90 @@
 
     <main role="main" class="">
       {% if messages %} {% for message in messages %}
-      <div class="alert alert-{{ message.tags }} text-center">{{ message }}</div>
-      {% endfor %} {% endif %} {% block content %}{% endblock %}
+      <div class="alert alert-{{ message.tags }} text-center">
+        {{ message }}
+      </div>
+      {% endfor %} 
+      {% endif %} 
+      {% block content %}
+      {% endblock %}
     </main>
 
-    <footer>
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"
-            ><img src="{% static 'media/axiom_logo_no_bg.webp' %}" alt="axiom logo" width="250px"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarToggle"
-            aria-controls="navbarToggle"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav me-auto">
-              <a class="nav-item nav-link" href="{% url 'jobs-home' %}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'jobs-postings' %}"
-                >Jobs</a
-              >
-              <a class="nav-item nav-link" href="{% url 'jobs-services' %}"
-                >Services</a
-              >
-              <a class="nav-item nav-link" href="{% url 'jobs-contact' %}"
-                >Contact</a
-              >
-            </div>
-            <!-- Navbar Right Side -->
-            <div class="navbar-nav">
-              {% if user.is_authenticated %}
-              {% if user.is_staff %}
+    <footer class="foot mt-5">
+
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <a class="navbar-brand mr-4" href="{% url 'jobs-home' %}"
+              ><img
+                src="{% static 'media/axiom_logo_no_bg.webp' %}"
+                alt="axiom logo"
+                width="250px"
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarToggle"
+              aria-controls="navbarToggle"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarToggle">
+              <div class="navbar-nav me-auto">
+                <a class="nav-item nav-link" href="{% url 'jobs-home' %}"
+                  >Home</a
+                >
+                <a class="nav-item nav-link" href="{% url 'jobs-postings' %}"
+                  >Jobs</a
+                >
+                <a class="nav-item nav-link" href="{% url 'jobs-services' %}"
+                  >Services</a
+                >
+                <a class="nav-item nav-link" href="{% url 'jobs-contact' %}"
+                  >Contact</a
+                >
+              </div>
+              <!-- Navbar Right Side -->
+              <div class="navbar-nav">
+                {% if user.is_authenticated %} {% if user.is_staff %}
                 <a class="nav-item nav-link" href="{% url 'job-create' %}"
-                >Post New Job</a>
-              {% endif %}
-              <a class="nav-item nav-link" href="{% url 'profile' %}"
-                >Profile</a
-              >
-              <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-              {% else %}
-              <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-              <a class="nav-item nav-link" href="{% url 'register' %}"
-                >Register</a
-              >
-              {% endif %}
+                  >Post New Job</a
+                >
+                {% endif %}
+                <a class="nav-item nav-link" href="{% url 'profile' %}"
+                  >Profile</a
+                >
+                <a class="nav-item nav-link" href="{% url 'logout' %}"
+                  >Logout</a
+                >
+                {% else %}
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                <a class="nav-item nav-link" href="{% url 'register' %}"
+                  >Register</a
+                >
+                {% endif %}
+              </div>
             </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+
     </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"></script>
-      <script src="https://kit.fontawesome.com/67c1c04fa5.js" crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/67c1c04fa5.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
