--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,5 @@
 {% extends "jobs/base.html" %}
+{% block nav_profile%}active{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
