updated button links on home page

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -7,14 +7,14 @@
   <div class="home-hero-title-cont row justify-content-center">
     <div class="home-hero-title col-6">
       <h2>Helping you find the best talent</h2>
-      <a class="btn btn-primary mt-2" href="#" role="button">Learn more</a>
+      <a class="btn btn-primary mt-2" href="{% url 'jobs-services' %}" role="button">Learn more</a>
     </div>
   </div>
 </section>
 
-<section class="services container-fluid">
+<section class="services container-lg mx-auto">
   <h2 class="text-center pb-3">Partner with Axiom</h2>
-  <div class="row gy-5">
+  <div class="row gx-1 gy-5">
     <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
@@ -30,7 +30,7 @@
         </div>
 
         <div class="card-footer mx-auto">
-          <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
+          <a href="{% url 'jobs-services' %}#recruitment" class="card-link btn btn-outline-primary">Learn More</a>
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="card-footer mx-auto">
-          <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
+          <a href="{% url 'jobs-services' %}#grow" class="card-link btn btn-outline-primary">Learn More</a>
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
         </div>
 
         <div class="card-footer mx-auto">
-          <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
+          <a href="{% url 'jobs-services' %}#mergers" class="card-link btn btn-outline-primary">Learn More</a>
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
         </div>
 
         <div class="card-footer mx-auto">
-          <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
+          <a href="{% url 'jobs-services' %}#consultant" class="card-link btn btn-outline-primary">Learn More</a>
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
         </div>
 
         <div class="card-footer mx-auto">
-          <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
+          <a href="{% url 'jobs-services' %}#client" class="card-link btn btn-outline-primary">Learn More</a>
         </div>
       </div>
     </div>
@@ -137,7 +137,7 @@
         </div>
 
         <div class="card-footer mx-auto">
-          <a href="#" class="card-link btn btn-outline-primary">Learn More</a>
+          <a href="{% url 'jobs-services' %}#sectors" class="card-link btn btn-outline-primary">Learn More</a>
         </div>
       </div>
     </div>
