--- a/jobs/templates/jobs/services.html
+++ b/jobs/templates/jobs/services.html
@@ -3,7 +3,7 @@
 {% block nav_services%}active{% endblock %}
 {% block content %}
 
-<section class="home-hero container-fluid bglight p-5">
+<section class="home-hero container-fluid bglight p-5 mb-3">
    <div class="home-hero-title-cont row justify-content-center">
      <div class="home-hero-title col-6">
        <h2>Our Services</h2>
@@ -11,16 +11,16 @@
    </div>
  </section>
 <section class="services">
-   <div class="container row gy-5">
+   <div class="container-lg row gx-3 gy-5 mx-auto">
 
-      <div class="col-6">
+      <div class="col-md-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
                class="card-img-top"
                alt="..."
             /> -->
-            <div class="card-body">
+            <div class="card-body" id="recruitment">
                <h3 class="card-title text-center">Recruitment</h3>
                <p class="card-text text-center">20 Years of experience</p>
                <ul class="list-group my-3">
@@ -37,14 +37,14 @@
          </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-md-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
                class="card-img-top"
                alt="..."
             /> -->
-            <div class="card-body">
+            <div class="card-body" id="grow">
                <h3 class="card-title text-center">Grow your business</h3>
                <p class="card-text text-center">Axiom Consultants can help grow your business in several ways</p>
                <ul class="list-group my-3">
@@ -63,15 +63,15 @@
          </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-md-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
                class="card-img-top"
                alt="..."
             /> -->
-            <div class="card-body">
-               <h3 class="card-title text-center">Acquisitions & Mergers</h3>
+            <div class="card-body" id="mergers">
+               <h3 class="card-title text-center">Mergers & Acquisitions</h3>
                <p class="card-text text-center">We can provide valuable assistance throughout the entire mergers and acquisitions (M&A) process. Here are some ways they can help</p>
                <ul class="list-group my-3">
                   <li class="list-group-item list-group-item-secondary text-center">Strategic Planning</li>
@@ -89,14 +89,14 @@
          </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-md-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
                class="card-img-top"
                alt="..."
             /> -->
-            <div class="card-body">
+            <div class="card-body" id="consultant">
                <h3 class="card-title text-center">Become an Axiom Consultant</h3>
                <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam perspiciatis repellat in et ratione dolorum totam quos molestias vero! Nam sequi nemo debitis! Optio fugiat assumenda voluptatibus excepturi esse? Expedita.</p>
                <ul class="list-group my-3">
@@ -115,14 +115,14 @@
          </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-md-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
                class="card-img-top"
                alt="..."
             /> -->
-            <div class="card-body">
+            <div class="card-body id="client"">
                <h3 class="card-title text-center">Become an Axiom Client</h3>
                <p class="card-text text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quidem quo placeat eos eveniet cumque voluptatibus minima inventore excepturi enim ad unde eum perspiciatis rem odio, impedit distinctio adipisci! Animi.</p>
                <ul class="list-group my-3">
@@ -141,14 +141,14 @@
          </div>
       </div>
 
-      <div class="col-6">
+      <div class="col-md-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
                class="card-img-top"
                alt="..."
             /> -->
-            <div class="card-body">
+            <div class="card-body" id="sectors">
                <h3 class="card-title text-center">Areas of Expertise</h3>
                <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quo, neque dolores a labore sequi, suscipit temporibus, similique id in ut consequuntur. Nam quam sit nisi explicabo, non eum labore?</p>
                <ul class="list-group my-3">
