Update services break points

--- a/jobs/templates/jobs/services.html
+++ b/jobs/templates/jobs/services.html
@@ -13,7 +13,7 @@
 <section class="services">
    <div class="container-lg row gx-3 gy-5 mx-auto">
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
@@ -37,7 +37,7 @@
          </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
@@ -63,7 +63,7 @@
          </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
@@ -89,7 +89,7 @@
          </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
@@ -115,7 +115,7 @@
          </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
@@ -141,7 +141,7 @@
          </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-lg-6">
          <div class="card px-0">
             <!-- <img
                src="{% static 'media/new_job.webp' %}"
