--- a/jobs/static/jobs/css/style.css
+++ b/jobs/static/jobs/css/style.css
@@ -109,7 +109,11 @@ footer {
 }
 
 .services {
-  padding: 30px 0px;
+  height: 100%;
+  background-image: url("/static/media/services-background.");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .services .card {
