fixed update job authority issue

--- a/jobs/templates/jobs/services.html
+++ b/jobs/templates/jobs/services.html
@@ -29,7 +29,7 @@
                   <li class="list-group-item list-group-item-secondary text-center">Business Development</li>
                   <li class="list-group-item list-group-item-secondary text-center">Talent Acquisition and Management</li>
                </ul>
-               <p class="card-text">
+               <p class="card-text text-center">
                   Axiom Consultants bring expertise, experience, and a fresh perspective to help businesses identify growth opportunities, optimise operations, attract and retain talent, and drive overall business growth.
                </p>
             </div>
@@ -55,7 +55,7 @@
                   <li class="list-group-item list-group-item-secondary text-center">Enhanced employer branding</li>
                   <li class="list-group-item list-group-item-secondary text-center">Retention strategies</li>
                </ul>
-               <p class="card-text">
+               <p class="card-text text-center">
                   It's important to note that the specific ways in which Axiom Consultants can help grow your business may vary depending on your industry, location, and specific needs. It is recommended to discuss your requirements with Axiom Consultants directly to understand how we can tailor our services to support your business growth.
                </p>
             </div>
@@ -81,7 +81,7 @@
                   <li class="list-group-item list-group-item-secondary text-center">Change Management and Communication</li>
                   <li class="list-group-item list-group-item-secondary text-center">Post-Merger Performance Management</li>
                </ul>
-               <p class="card-text">
+               <p class="card-text text-center">
                   Please note that the specific services provided by Axiom Consultants may vary depending on the client's requirements and the unique circumstances of each M&A transaction.
                </p>
             </div>
@@ -107,7 +107,7 @@
                   <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
                   <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
                </ul>
-               <p class="card-text">
+               <p class="card-text text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. In, consequatur unde. Quae dolor recusandae quasi quos corporis nisi dolorem tempore voluptates atque, natus dignissimos voluptatem amet quo, quod ipsa animi.
                </p>
             </div>
@@ -133,7 +133,7 @@
                   <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
                   <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
                </ul>
-               <p class="card-text">
+               <p class="card-text text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque commodi corporis facilis? Sint laudantium libero, tenetur, dolores qui cupiditate hic officia quisquam, quibusdam similique at natus quasi voluptates sunt fugiat.
                </p>
             </div>
@@ -159,7 +159,7 @@
                   <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
                   <li class="list-group-item list-group-item-secondary text-center">Bullet</li>
                </ul>
-               <p class="card-text">
+               <p class="card-text text-center">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor corporis repellendus facere quis quas. Doloremque velit, nostrum magni quia corporis sint delectus, aliquid quo facilis praesentium, odio maxime dolorem nobis.
                </p>
             </div>
