--- a/jobs/static/jobs/css/style.css
+++ b/jobs/static/jobs/css/style.css
@@ -110,7 +110,7 @@ footer {
 
 .services {
   height: 100%;
-  background-image: url("/static/media/services-background.");
+  background-image: url("/static/media/services-background");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
