--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -12,13 +12,28 @@
   </div>
 </section>
 
-<section class="services container-lg mx-auto">
+<section class="services container-lg mx-auto mt-5">
+  <div class="mx-5 my-5">
   <h2 class="text-center pb-3">Partner with Axiom</h2>
+  <div class="">
+    <p>Axiom Consultants is a recruitment company that specialises in connecting job seekers with employers in various industries. We act as a bridge between talented individuals looking for opportunities and companies in need of skilled professionals. We work with clients across Ireland and the UK. Our main areas of expertise are Financial Services, Accountancy, IT, Medical Services. <br><br>
+    
+      As a recruitment company, Axiom Consultants generally undertakes the following activities: 
+    </p>
+    <ul>
+      <li>Talent search and acquisition: Screening and shortlisting</li>
+      <li>Reference and background checks</li>
+      <li>Coordinating interviews</li>
+      <li>Negotiating offers and contract signing</li>
+    </ul>
+  </div>
+  </div>
+
   <div class="row gx-1 gy-5">
     <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
-          src="{% static 'media/new_job.webp' %}"
+          src="{% static 'media/axiom_recruitment.webp' %}"
           class="card-img-top"
           alt="..."
         />
