--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -12,7 +12,7 @@
   </div>
 </section>
 
-<section class="services container-lg mx-auto mt-5">
+<section class="home-services container-fluid mx-auto py-3">
   <div class="mx-5 my-5">
   <h2 class="text-center pb-3">Partner with Axiom</h2>
   <div class="">
@@ -53,7 +53,7 @@
     <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
-          src="{% static 'media/grow_your_business.webp' %}"
+          src="{% static 'media/axiom_grow.webp' %}"
           class="card-img-top"
           alt="..."
         />
@@ -73,7 +73,7 @@
     <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
-          src="{% static 'media/merger.webp' %}"
+          src="{% static 'media/axiom_ma.webp' %}"
           class="card-img-top"
           alt="..."
         />
@@ -92,15 +92,15 @@
     <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
-          src="{% static 'media/new_job.webp' %}"
+          src="{% static 'media/axiom_consultant.webp' %}"
           class="card-img-top"
           alt="..."
         />
         <div class="card-body">
           <h5 class="card-title text-center">Become and Axiom Consultant</h5>
-          <p class="card-text">
+          <!-- <p class="card-text">
             If you would like to manage your own work diary, work fully remotely and dictate what you earn, then becoming an Axiom Consultant might be for you. We work closely with our clients to forge lasting relationships. They trust us to deliver to them the best talent in the market. If you have experience in Financial Services or have worked in a recruitment sector that you would like to develop under the Axiom brand, then we would like to hear from you.
-          </p>
+          </p> -->
         </div>
 
         <div class="card-footer mx-auto">
@@ -112,15 +112,15 @@
     <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
-          src="{% static 'media/grow_your_business.webp' %}"
+          src="{% static 'media/axiom_client.webp' %}"
           class="card-img-top"
           alt="..."
         />
         <div class="card-body">
           <h5 class="card-title text-center">Become an Axiom Client</h5>
-          <p class="card-text">
+          <!-- <p class="card-text">
             Axiom Consultants has spent the last 5 years building a highly credible and recognised level of service that is unrivalled. Working closely with our clients, understanding the culture of your organisation and then presenting only relevant candidates to you is what we do best.
-          </p>
+          </p> -->
         </div>
 
         <div class="card-footer mx-auto">
@@ -132,13 +132,13 @@
     <div class="col-12 col-md-4">
       <div class="card px-0">
         <img
-          src="{% static 'media/merger.webp' %}"
+          src="{% static 'media/axiom_expertise.webp' %}"
           class="card-img-top"
           alt="..."
         />
         <div class="card-body">
           <h5 class="card-title text-center">Our focus sectors</h5>
-          <ul class="card-text">
+          <!-- <ul class="card-text">
             <li>Wealth Management</li>
             <li>Financial Planning</li>
             <li>Mergers & Acquisitions</li>
@@ -147,7 +147,7 @@
             <li>Administration</li>
             <li>Medical Services</li>
             <li>IT</li>
-          </ul>
+          </ul> -->
 
         </div>
 
