--- a/jobs/templates/jobs/postings.html
+++ b/jobs/templates/jobs/postings.html
@@ -14,7 +14,7 @@
 
 {% for job in jobs %}
 
-<div class="container media content-section">
+<div class="container media content-section col-9">
   <div class="media-body">
     <div class="job-metadata row">
       <small class="text-muted col icon"><i class="fa-solid fa-location-dot fa-lg" style="color: orange;"></i> {{ job.location }}</small>
