--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -104,7 +104,7 @@
       {% endblock %}
     </main>
 
-    <footer class="foot mt-5">
+    <footer class="foot">
 
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
