--- a/jobs/templates/jobs/contact.html
+++ b/jobs/templates/jobs/contact.html
@@ -3,6 +3,15 @@
 {% block nav_contact%}active{% endblock %}
 {% block content %}
 
+<section class="home-hero container-fluid bglight p-5">
+  <div class="home-hero-title-cont row justify-content-center">
+    <div class="home-hero-title col-6">
+      <h2>Helping you find the best talent</h2>
+      <a class="btn btn-primary mt-2" href="{% url 'jobs-services' %}" role="button">Learn more</a>
+    </div>
+  </div>
+</section>
+
    <section class="container-fluid py-4" id="contact">
       <h1 class="text-center">Contact us</h1>
       <h2 class="text-center">For a confidential chat</h2>
