updated services bg image with cloudinary url

--- a/jobs/static/jobs/css/style.css
+++ b/jobs/static/jobs/css/style.css
@@ -114,7 +114,7 @@ ul {
 
 .services {
   width: 100%;
-  background-image: url("/static/media/axiom_services_bg.webp");
+  background-image: url("https://res.cloudinary.com/dltyaip8n/image/upload/v1698671775/static/media/axiom_services_bg.7187aa845188.webp");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
