--- a/jobs/static/jobs/css/style.css
+++ b/jobs/static/jobs/css/style.css
@@ -116,7 +116,7 @@ ul {
   height: 100%;
   background-image: url(https://res.cloudinary.com/dltyaip8n/image/upload/v1698671775/static/media/axiom_services_bg.7187aa845188.webp);
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;
 }
 
