--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -5,7 +5,7 @@
 
 <section class="home-hero container-fluid bglight p-5">
   <div class="home-hero-title-cont row justify-content-center">
-    <div class="home-hero-title col-6">
+    <div class="home-hero-title col-6 mx-auto">
       <h2>Helping you find the best talent</h2>
       <a class="btn btn-primary mt-2" href="{% url 'jobs-services' %}" role="button">Learn more</a>
     </div>
