--- a/jobs/static/jobs/css/style.css
+++ b/jobs/static/jobs/css/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background-color: #f3f3f3e4;
+    background-color: #f3f3f3;
     color: #333333;
     max-width: 1300px;
     margin: 0 auto;
@@ -31,7 +31,7 @@ ul {
 
 .site-header,
 .foot {
-  background-color: #dddddde4;
+  background-color: #D1D4D9;
 }
 
 .nav-link.active {
@@ -108,7 +108,7 @@ ul {
 }
 
 .card-footer {
-  background-color: #dddddde4 !important;
+  background-color: ##D1D4D9 !important;
   border-top: 0 !important;
   padding-top: 0 !important;
 }
@@ -123,7 +123,7 @@ ul {
 }
 
 .card {
-  background-color: #dddddde4 !important;
+  background-color: ##D1D4D9 !important;
   margin: 0 10px;
 }
 
