--- a/jobs/templates/jobs/job_detail.html
+++ b/jobs/templates/jobs/job_detail.html
@@ -28,7 +28,7 @@
   {% if object.creator == user or user.is_staff %}
   <div class="container">
     <a
-      class="btn btn-secondary btn-sm mt-1 mb-1"
+      class="btn btn-success btn-sm mt-1 mb-1"
       href="{% url 'job-update' object.id %}"
       >Update</a
     >
