--- a/jobs/templates/jobs/job_form.html
+++ b/jobs/templates/jobs/job_form.html
@@ -12,7 +12,7 @@
         {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Post Job</button>
+            <button class="btn btn-outline-success" type="submit">Post Job</button>
         </div>
     </form>
    </div>
