--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -23,7 +23,7 @@
             {{ profile_form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Update</button>
+            <button class="btn btn-outline-success" type="submit">Update</button>
         </div>
     </form>
     </div>
