added 2 new intro paragraphs to home page

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -16,16 +16,16 @@
   <div class="mx-5 my-5">
   <h2 class="text-center pb-3">Partner with Axiom</h2>
   <div class="">
-    <p>Axiom Consultants is a recruitment company that specialises in connecting job seekers with employers in various industries. We act as a bridge between talented individuals looking for opportunities and companies in need of skilled professionals. We work with clients across Ireland and the UK. Our main areas of expertise are Financial Services, Accountancy, IT, Medical Services. <br><br>
-    
-      As a recruitment company, Axiom Consultants generally undertakes the following activities: 
+    <p>
+      Axiom Consultants is a recruitment company that specialises in connecting job seekers with employers in various industries. We act as a bridge between talented individuals looking for opportunities and companies in need of skilled professionals. We work with clients across Ireland and the UK. Our main areas of expertise are Financial Services, Accountancy, IT and Medical Services. <br>
+    <p>
+      Our philosophy is to provide top talent solutions, not high volumes of CV’s with irrelevant experience. When you partner with us, you can be assured that we will source the right people for your organisation and will be closely involved in the hiring process from start to finish and beyond. We are very proud of our strong relationships with some of the most reputable financial services companies and without doubt, the market’s best collection of talent.
     </p>
-    <ul>
-      <li>Talent search and acquisition: Screening and shortlisting</li>
-      <li>Reference and background checks</li>
-      <li>Coordinating interviews</li>
-      <li>Negotiating offers and contract signing</li>
-    </ul>
+
+    <p>
+      As a candidate, when you engage with Axiom Consultants, you automatically receive our full attention. We listen to your career objectives and will stay in regular communication with you throughout the interview processes, provide quick and honest feedback and be here for you to answer any queries you may have along the way. As candidates, you are also our clients and we are here to support you throughout your career progression.
+    </p>
+      
   </div>
   </div>
 
@@ -138,16 +138,6 @@
         />
         <div class="card-body">
           <h5 class="card-title text-center">Our focus sectors</h5>
-          <!-- <ul class="card-text">
-            <li>Wealth Management</li>
-            <li>Financial Planning</li>
-            <li>Mergers & Acquisitions</li>
-            <li>Accountancy</li>
-            <li>AML & Compliance</li>
-            <li>Administration</li>
-            <li>Medical Services</li>
-            <li>IT</li>
-          </ul> -->
 
         </div>
 
