--- a/jobs/templates/jobs/services.html
+++ b/jobs/templates/jobs/services.html
@@ -130,7 +130,7 @@
                class="card-img-top"
                alt="..."
             /> -->
-            <div class="card-body id="client"">
+            <div class="card-body" id="client">
                <h3 class="card-title text-center">Become an Axiom Client</h3>
                <!-- <p class="card-text text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quidem quo placeat eos eveniet cumque voluptatibus minima inventore excepturi enim ad unde eum perspiciatis rem odio, impedit distinctio adipisci! Animi.</p> -->
                <ul class="my-3 col-9 mx-auto">
